--- a/Resources/package.json
+++ b/Resources/package.json
@@ -1,7 +1,7 @@
 {
   "name": "catena",
   "version": "1.0.0",
-  "description": "",
+  "description": "Catena web client",
   "main": "catena.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,8 +17,12 @@
     "vueify": "^9.4.1"
   },
   "dependencies": {
+    "base58check": "^2.0.0",
+    "bs58check": "^2.0.2",
+    "fast-sha256": "^1.0.0",
+    "supercop.js": "^2.0.1",
+    "typedarray-to-buffer": "^3.1.2",
     "vue": "^2.4.4",
-    "vue-resource": "^1.3.4",
-    "vue-template-compiler": "^2.4.4"
+    "vue-resource": "^1.3.4"
   }
 }
