--- a/Resources/package.json
+++ b/Resources/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "base58check": "^2.0.0",
+    "base64-js": "^1.2.1",
     "bs58check": "^2.0.2",
     "fast-sha256": "^1.0.0",
     "supercop.js": "^2.0.1",
