Fix tests and let Travis run them

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 .DS_Store
-/.build
-/Packages
-/*.xcodeproj
-catena.sqlite
 *.sqlite
 *.sqlite-shm
 *.sqlite-wal
-Package.pins
-docs
-Package.resolved
-Resources/node_modules
-package-lock.json
+/.build
+/build
+/Packages
+/*.xcodeproj
+/Package.pins
+/docs
+/Package.resolved
+/Resources/node_modules
+/Resources/package-lock.json
+
