--- a/Resources/package.json
+++ b/Resources/package.json
@@ -24,6 +24,7 @@
     "supercop.js": "^2.0.1",
     "typedarray-to-buffer": "^3.1.2",
     "vue": "^2.4.4",
+    "vue-i18n": "^7.3.2",
     "vue-resource": "^1.3.4"
   }
 }
